k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mundo-invest-gateway
  namespace: default
spec:
  selector:
    app: mundo-invest-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
