k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mundo-invest-api
  namespace: default
spec:
  selector:
    app: mundo-invest-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
